# protocol

./: Protocol.cs  Protocol.csproj  README.md  base_message.proto  category.json  generate.sh
auth/: login.proto
cs/: Protocol.cs  Protocol.csproj  protocol.csproj
cs/src/: Protocol.cs
docs/: game.md
go/: .gitignore  gen.sh  go.mod  protocol.go  util.go
lib/rs/: Cargo.toml  build.rs
lib/rs/generator/: Cargo.toml
lib/rs/generator/src/: error.rs  generator.rs  lib.rs
lib/rs/src/: convert.rs  game.rs  lib.rs  lobby.rs
messages/: base_message.proto
msg/: base_message.proto
msg/net/: heart_beat.proto  heartbeat.proto  login.proto  ping.proto
net/: ping.proto
rs/: Cargo.toml  build.rs
rs/src/: lib.rs  protocol.rs
schema/: biome_type.gen.proto  category.proto  character.proto  character_data.proto  guild_data.proto  item_data.proto  net.json  party_data.proto  play.json  player_data.proto  protocol_id.proto  race.gen.proto  resource_data.proto  transform.proto  uuid.proto  vector.proto
schema/auth/: auth.proto  auth_protocol.proto  login.proto
schema/client/: client.proto
schema/game/: auth.json  net.json  play.json  social.json  tool.json
schema/lobby/: accountant.proto  characters.proto  dev_auth.proto  steam_auth.proto
schema/net/: net.proto  net_protocol.proto  pong.proto
schema/play/: movement_command.proto  play.proto
schema/server/: server.proto
schemas/: auth_protocol.proto  game_protocol.proto  math_types.proto  net_protocol.proto
schemas/auth/: auth_protocol.proto  login.proto
schemas/game/: game_protocol.proto  (+2 more)
(+46 files in other folders)
