[package]
name = "front_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
nalgebra = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = "*"
uuid = { workspace = true }

[build-dependencies]
glob = "0.3"
heck = "0.5"
prost-build = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-prost-build = "*"
